<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MesDepensesTelecom</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_login">Login</string>
    <string name="menu_register">Register</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_form_abonnement">test form</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="welcome_please_log_in">Welcome, please log in</string>
    <string name="welcome_please_register">Welcome, please register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="not_yet_registered_signup">Not yet registered? Signup</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered_login">Already registered? Login</string>

    <string name="Enter_the_information_of_your_abonnement">Enter the information of your abonnement</string>
    <string name="select_operator">Select Operator</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="select_end_date">Select End Date</string>

    <string name="amount">Amount</string>
    <string name="select_contract_duration">Select Contract Duration</string>
    <string name="submit">Submit</string>

    <string name="title_supplement">Ajoutez une recharge supplément pour l\'une de vos abonnements </string>
    <string name="title_rsimple">Ajoutez une recharge simple</string>
    <string name="menu_recharge">Recharge</string>




    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
</resources>