<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_login">

    <fragment
        android:id="@+id/nav_transform"
        android:name="com.gi3.mesdepensestelecom.ui.transform.TransformFragment"
        android:label="@string/menu_transform"
        tools:layout="@layout/fragment_transform" />

    <fragment
        android:id="@+id/nav_reflow"
        android:name="com.gi3.mesdepensestelecom.ui.reflow.ReflowFragment"
        android:label="@string/menu_reflow"
        tools:layout="@layout/fragment_reflow" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.gi3.mesdepensestelecom.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.gi3.mesdepensestelecom.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.gi3.mesdepensestelecom.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_register"
        android:name="com.gi3.mesdepensestelecom.ui.register.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/nav_form_abonnement"
        android:name="com.gi3.mesdepensestelecom.ui.abonnement_form.AbonnementFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_abonnement" />

    <fragment
        android:id="@+id/nav_recharge"
        android:name="com.gi3.mesdepensestelecom.ui.recharge.RechargeFragment"
        android:label="Recharge"
        tools:layout="@layout/fragment_recharge" />

    <fragment
        android:id="@+id/fragment_recharge_simple"
        android:name="com.gi3.mesdepensestelecom.ui.recharge.RechargeSimpleFragment"
        android:label="Recharge Simple"
        tools:layout="@layout/fragment_recharge_simple" />

    <fragment
        android:id="@+id/fragment_recharge_supplement"
        android:name="com.gi3.mesdepensestelecom.ui.recharge.RechargeSupplementFragment"
        android:label="Recharge Supplément"
        tools:layout="@layout/fragment_recharge_supplement" />


    <fragment
        android:id="@+id/nav_showAbonnements"
        android:name="com.gi3.mesdepensestelecom.ui.ShowAbonnements.ShowAbonnementFragment"
        android:label="Abonnements"
        tools:layout="@layout/fragment_all_abonnements" />


</navigation>