<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--        <item
                    android:id="@+id/nav_transform"
                    android:icon="@drawable/ic_camera_black_24dp"
                    android:title="@string/menu_transform" />-->
                <item
                    android:id="@+id/nav_reflow"
                    android:icon="@drawable/ic_gallery_black_24dp"
                    android:title="@string/menu_reflow" />
        <!--        <item-->
<!--            android:id="@+id/nav_slideshow"-->
<!--            android:icon="@drawable/ic_slideshow_black_24dp"-->
<!--            android:title="@string/menu_slideshow" />-->
        <item


            android:id="@+id/nav_form_abonnement"
            android:icon="@drawable/ic_slideshow_black_24dp"
            android:title="@string/menu_form_abonnement" />
        <item


            android:id="@+id/nav_form_dashboard_comp"
            android:icon="@drawable/ic_slideshow_black_24dp"
            android:title="DashboardComparator" />


        <item
            android:id="@+id/nav_recharge"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/menu_recharge" />
        <item

            android:id="@+id/nav_showAbonnements"
            android:icon="@drawable/ic_slideshow_black_24dp"
            android:title="Abonnements" />

    </group>
</menu>